correct width for widgets on small-screen devices, no longer css-calc widths; Tested on Windows (FF8, Chrome 15), Built-in browsers of: Samsung Galaxy S2 (Gingerbread), Samsung Galaxy Tab 10.1 (Honeycomb), iPhone 3GS (iOS 5), Samsung Galaxy S (Gingerbread)

--- a/visu/designs/alaska_slim/basic.css
+++ b/visu/designs/alaska_slim/basic.css
@@ -82,21 +82,23 @@ div#top {
   text-decoration: none;
 }
 
+.widget_container {
+  width: 33%;
+  float: left;
+}
+
+.widget_container .widget_container {
+    width: 100%;
+}
+
 .widget
 {
-  float:left;
-  width:32%;
   margin: 0.2em;
   padding: 0.2em;
   border-style: solid none none none; /* oben rechts unten links */
   border-width: 1px;
   min-height: 2em;
   background: transparent;
-}
-
-.widget .widget
-{
-  width:98%;
 }
 
 .text > div, .link > a {
